compiler-tests/src/test/data/diagnostic/bindingcontainer/CannotAnnotateBothGraphAndContainer.kt
// RENDER_DIAGNOSTICS_FULL_TEXT

<!BINDING_CONTAINER_ERROR!>@DependencyGraph<!>
@BindingContainer
interface ConfusedContainer {
  @Binds val Int.bind: Number
}
